--- a/src/data/projectList.json
+++ b/src/data/projectList.json
@@ -4,7 +4,10 @@
         "description": "Entrepreneur’s Business Simulator is a software designed to train young entrepreneurs within all aspects of business and financial management.",
         "tags": [
             "Python", 
-            "Django"
+            "Django",
+            "JavaScript",
+            "Jinja2",
+            "PostgreSQL"
         ],
         "projUrl": "https://ebs.org/",
         "githubUrl": null,
@@ -20,7 +23,10 @@
         "tags": [
             "PHP", 
             "Laravel",
-            "Next.js"
+            "Next.js",
+            "Node.js",
+            "TailwindCSS",
+            "MySQL"
         ],
         "projUrl": "https://practical.me/",
         "githubUrl": null,
@@ -36,7 +42,10 @@
         "tags": [
             "PHP", 
             "Laravel",
-            "React-native"
+            "React-native",
+            "Vite.js",
+            "Node.js",
+            "MySQL"
         ],
         "projUrl": "https://www.gobro.co.nz/",
         "githubUrl": null,
@@ -52,7 +61,10 @@
         "tags": [
             "Python", 
             "Django",
-            "React-native"
+            "React-native",
+            "Vite.js",
+            "Node.js",
+            "PostgreSQL"
         ],
         "projUrl": "https://nft-showroom.com/",
         "githubUrl": null,
@@ -68,7 +80,10 @@
         "tags": [
             "PHP", 
             "Laravel", 
-            "React.js"
+            "React.js",
+            "Vite.js",
+            "Node.js",
+            "MySQL"
         ],
         "projUrl": "https://www.lawnprosoftware.com",
         "githubUrl": null,
@@ -84,7 +99,8 @@
         "tags": [
             "Flask", 
             "Python",
-            "JavaScript"
+            "JavaScript",
+            "MongoDB"
         ],
         "projUrl": null,
         "githubUrl": "https://github.com/Blankscreen-exe/Crypto-Price-Tracker",
@@ -101,7 +117,9 @@
             "Crew.ai", 
             "Python",
             "Flask",
-            "React.js"
+            "React.js",
+            "Vite.js",
+            "MongoDB"
         ],
         "projUrl": null,
         "githubUrl": "https://github.com/Blankscreen-exe/The-Duck-Council",
@@ -120,8 +138,10 @@
             "Truffle",
             "Web3.js",
             "React.js",
+            "Vite.js",
             "Metamask",
-            "Nest.js"
+            "Nest.js",
+            "Turso DB"
         ],
         "projUrl": null,
         "githubUrl": null,
@@ -135,11 +155,13 @@
         "title": "Crowdfunding Decentralized App",
         "description": "It is a crowdfunding solution but built entirely on web3.0. Host your projects here for funding via crypto and withdraw funds whenever.",
         "tags": [
-            "React.js", 
+            "React.js",
+            "Vite.js",
             "Hedera Hashgraph",
             "Metamask",
             "Ethers.js",
-            "Nest.js"
+            "Nest.js",
+            "Turso DB"
         ],
         "projUrl": null,
         "githubUrl": null,
@@ -154,6 +176,7 @@
         "description": "An Expendible Timtable suitable for quick weekly planning. Simple yet loaded with features you will love.",
         "tags": [
             "React.js", 
+            "Vite.js",
             "Node.js"
         ],
         "projUrl": null,
@@ -165,11 +188,14 @@
         "openToContrib": true
     },
     {
-        "title": "YC Directory",
-        "description": "A startup directory where you can showcase your startup and engage with people.",
+        "title": "Startup Showroom",
+        "description": "A startup directory where you can showcase your startup, engage with people and get noticed.",
         "tags": [
             "Next.js", 
-            "Node.js"
+            "Node.js",
+            "TypeScript",
+            "Sanity",
+            "TailwindCSS"
         ],
         "projUrl": null,
         "githubUrl": "https://github.com/Blankscreen-exe/yc_directory",
@@ -180,28 +206,14 @@
         "openToContrib": true
     },
     {
-        "title": "The Save Stash",
-        "description": "This is where I keep all my games' save files as trophies",
-        "tags": [
-            "JavaScript", 
-            "HTML",
-            "CSS"
-        ],
-        "projUrl": "https://blankscreen-exe.github.io/The-Save-Stash/",
-        "githubUrl": "https://github.com/Blankscreen-exe/The-Save-Stash",
-        "publishDate": "Dec 2024",
-        "thumbnailUrl": "project:thesavestash",
-        "category":"hobby",
-        "status": "finished",
-        "openToContrib": true
-    },
-    {
         "title": "Cloud Munshi",
         "description": "It is a Point-of-Sales (POS) software for those who wan to keep track of their inventory and manage businesses.",
         "tags": [
             "PHP", 
             "Yii",
-            "Next.js"
+            "Next.js",
+            "Vite.js",
+            "MySQL"
         ],
         "projUrl": "https://www.cloudmunshi.com/demo/munshi",
         "githubUrl": null,
@@ -262,22 +274,6 @@
         "openToContrib": true
     },
     {
-        "title": "TermaChat",
-        "description": "A CMD applet for peer-to-peer serverless communication.",
-        "tags": [
-            "Python",
-            "Websockets",
-            "Multithreading"
-        ],
-        "projUrl": "https://github.com/Blankscreen-exe/TermaChat",
-        "githubUrl": "https://github.com/Blankscreen-exe/TermaChat",
-        "publishDate": "Jan 2025",
-        "thumbnailUrl": "https://raw.githubusercontent.com/Blankscreen-exe/TermaChat/refs/heads/main/docs/thumbnail.png",
-        "category":"hobby",
-        "status": "finished",
-        "openToContrib": true
-    },
-    {
         "title": "Shell Show",
         "description": "A CMD applet which can render images inside the terminal.",
         "tags": [
@@ -310,28 +306,12 @@
         "openToContrib": true
     },
     {
-        "title": "Color To GrayScale Converter",
-        "description": "I made this to assist me in picking out the grayscale version of colors during my pixel art practice. Nothing too fancy about it.",
-        "tags": [
-            "JavaScript", 
-            "Tailwind"
-        ],
-        "projUrl": "https://blankscreen-exe.github.io/ColorToGrayScale-converter/",
-        "githubUrl": "https://github.com/Blankscreen-exe/ColorToGrayScale-converter",
-        "publishDate": "Mar 2024",
-        "thumbnailUrl": null,
-        "category":"hobby",
-        "status": "finished",
-        "openToContrib": true
-    },
-    {
         "title": "Triple Triad Card Maker",
         "description": "This is a game card generator which takes in .png assets and compiles them into a game card which can then be printed.",
         "tags": [
             "Python", 
             "OpenCV",
             "Numpy",
-            "tripletriad",
             "game"
         ],
         "projUrl": null,
@@ -359,29 +339,12 @@
         "openToContrib": true
     },
     {
-        "title": "Invoice Generator",
-        "description": "This is an invoice generator built with Jinja2 and WeasyPrint. You can use this to make a pdf and an html invoice. Before you can use this script, you will need to customize some settings beforehand.",
-        "tags": [
-            "Python", 
-            "Jinja2",
-            "WeasyPrint",
-            "HTML",
-            "CSS"
-        ],
-        "projUrl": null,
-        "githubUrl": "https://github.com/Blankscreen-exe/invoice_generator",
-        "publishDate": "Nov 2023",
-        "thumbnailUrl": null,
-        "category":"hobby",
-        "status": "finished",
-        "openToContrib": false
-    },
-    {
         "title": "Screen Magnifier",
         "description": "An app for magnifying a portion of the screen. Useful for when you want to enlarge a portion of the screen while presentating a lot code and text.",
         "tags": [
             "Python", 
             "OpenCV",
+            "PyQT",
             "Pillow"
         ],
         "projUrl": null,
@@ -398,6 +361,7 @@
         "tags": [
             "Python", 
             "Machine Learning",
+            "TKinter",
             "Tensorflow"
         ],
         "projUrl": null,
@@ -428,6 +392,7 @@
         "description": "This is a number guessing game where the player will be given a number and they will have to guess if the next number will be larger or smaller. Based on their answer they will either get a point or loose a life.",
         "tags": [
             "JavaScript",
+            "Vite.js",
             "React.js"
         ],
         "projUrl": "https://usagichan-numbergame.netlify.app/",
@@ -459,7 +424,11 @@
         "tags": [
             "Data Visualization", 
             "Data Analysis", 
-            "SQL",
+            "Tensorflow",
+            "Scikitlearn",
+            "Seaborn",
+            "Pandas",
+            "Numpy",
             "Python"
         ],
         "projUrl": "",
@@ -476,6 +445,10 @@
         "tags": [
             "PowerBI", 
             "SQL",
+            "Pandas",
+            "Numpy",
+            "Tensorflow",
+            "Scikitlearn",
             "Python"
         ],
         "projUrl": "",
@@ -492,12 +465,66 @@
         "tags": [
             "PowerBI", 
             "SQL",
+            "Pandas",
+            "Numpy",
+            "Tensorflow",
+            "Scikitlearn",
             "Python"
         ],
         "projUrl": "",
         "githubUrl": "https://github.com/Blankscreen-exe/PowerBI-Competition-MAT-May-2022",
         "publishDate": "Mar 2022",
         "thumbnailUrl": "https://raw.githubusercontent.com/Blankscreen-exe/PowerBI-Competition-MAT-May-2022/refs/heads/main/images/Screenshot_8.jpg",
+        "category":"hobby",
+        "status": "finished",
+        "openToContrib": false
+    },
+    {
+        "title": "TermaChat",
+        "description": "A CMD applet for peer-to-peer serverless communication.",
+        "tags": [
+            "Python",
+            "Websockets",
+            "Multithreading"
+        ],
+        "projUrl": "https://github.com/Blankscreen-exe/TermaChat",
+        "githubUrl": "https://github.com/Blankscreen-exe/TermaChat",
+        "publishDate": "Jan 2025",
+        "thumbnailUrl": "https://raw.githubusercontent.com/Blankscreen-exe/TermaChat/refs/heads/main/docs/thumbnail.png",
+        "category":"hobby",
+        "status": "finished",
+        "openToContrib": true
+    },
+    {
+        "title": "The Save Stash",
+        "description": "This is where I keep all my games' save files as trophies",
+        "tags": [
+            "JavaScript", 
+            "HTML",
+            "CSS"
+        ],
+        "projUrl": "https://blankscreen-exe.github.io/The-Save-Stash/",
+        "githubUrl": "https://github.com/Blankscreen-exe/The-Save-Stash",
+        "publishDate": "Dec 2024",
+        "thumbnailUrl": "project:thesavestash",
+        "category":"hobby",
+        "status": "finished",
+        "openToContrib": true
+    },
+    {
+        "title": "Invoice Generator",
+        "description": "This is an invoice generator built with Jinja2 and WeasyPrint. You can use this to make a pdf and an html invoice. Before you can use this script, you will need to customize some settings beforehand.",
+        "tags": [
+            "Python", 
+            "Jinja2",
+            "WeasyPrint",
+            "HTML",
+            "CSS"
+        ],
+        "projUrl": null,
+        "githubUrl": "https://github.com/Blankscreen-exe/invoice_generator",
+        "publishDate": "Nov 2023",
+        "thumbnailUrl": null,
         "category":"hobby",
         "status": "finished",
         "openToContrib": false
