--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "echarts": "^5.5.0",
     "echarts-for-react": "^3.0.2",
     "react": "^18.2.0",
+    "react-countup": "^6.5.3",
     "react-dom": "^18.2.0",
     "react-email-validator": "^1.0.2",
     "react-icons": "^5.0.1",
